# auto_kkjh

./: .gitignore  README.md  pyproject.toml
app/: app.py  cookbook.py  setup_cx_freeze.py  template.xlsx
app/cx-Freeze/: setup.py
app/py2exe/: setup.py
app/src/: app.py  attendanceRecord.py  user.py  userRepository.py  userService.py  userSetting.py  util.py
app/tests/: test_userSetting.py
