[tool.poetry]
name = "kintai"
version = "0.1.0"
description = "勤怠管理エクセル自動作成転記システム"
authors = ["Abe Shunta"]

[tool.poetry.dependencies]
python = "^3.9"
PySimpleGUI = "^4.39.1"
openpyxl = "^3.0.7"

[tool.poetry.dev-dependencies]
cx-Freeze = "^6.6"
pyinstaller = "^4.3"
black = "^21.4b0"
flake8 = "^3.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
